--- a/photos/templates/photos/about.html
+++ b/photos/templates/photos/about.html
@@ -1,5 +1,26 @@
 {% extends "photos/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
     <h1>About Page</h1>
-    
+    <div class="content-section">
+        <div class="media">
+            <img class="rounded-circle account-img" src=" {{users.profile.image.url}} " alt="">
+        <div class="media-body">
+            <h2 class="account-heading"> {{user.username}} </h2>
+            <p class="text-secondary"> {{ user.email}}</p>
+        </div>
+        </div>
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">
+                    Profile  &#x1F60a;
+                </legend>
+                {{u_form|crispy}}
+                {{p_form|crispy}}
+            </fieldset>
+            
+        </form>
+    </div>
+
 {% endblock content %}
