--- a/photos/templates/photos/about.html
+++ b/photos/templates/photos/about.html
@@ -16,8 +16,8 @@
                 <legend class="border-bottom mb-4">
                     Profile  &#x1F60a;
                 </legend>
-                {{u_form|crispy}}
-                {{p_form|crispy}}
+                {{a_form|crispy}}
+                
             </fieldset>
             
         </form>
