--- a/photos/static/photos/main.css
+++ b/photos/static/photos/main.css
@@ -82,3 +82,12 @@ body {
   .account-heading {
     font-size: 2.5rem;
   }
+  .fa {
+    font-size: 50px;
+    cursor: pointer;
+    user-select: none;
+  }
+  
+  .fa:hover {
+    color: darkblue;
+  }
